--- a/src/Enexure.MicroBus.InfrastructureContracts/project.json
+++ b/src/Enexure.MicroBus.InfrastructureContracts/project.json
@@ -5,7 +5,7 @@
 
   "packOptions": {
     "owners": [ "lavinski" ],
-    "copyright": "Copyright © Daniel Little 2015",
+    "copyright": "Copyright ?Daniel Little 2015",
     "tags": [ "MicroBus", "Mediator", "Contracts", "Bus" ],
     "releaseNotes": "",
     "licenseUrl": "https://github.com/Lavinski/Enexure.MicroBus/blob/master/License.md",
